objects/Booth_Product__c.object
<CustomObject>
    <fields>
        <fullName>BP_PdfLink__c</fullName>
        <label>PdfLink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BP_ProductName__c</fullName>
        <label>ProductName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BT_id__c</fullName>
        <label>Booth</label>
        <referenceTo>Booth__c</referenceTo>
        <relationshipLabel>Booth_Product</relationshipLabel>
        <relationshipName>Booth_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMobile</label>
        <type>Checkbox</type>
    </fields>
    <label>Booth_Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BP_ProductName__c</columns>
        <columns>BT_id__c</columns>
        <columns>BP_PdfLink__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BP_{00000000}</displayFormat>
        <label>BP_id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booth_Product</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>